classDiagram
    class Usuario {
        +int id
        +str nombre
        +str apellido
        +str email
        +str password
        +__str__()
    }

    class Nen {
        +int id
        +str child_name
        +int edad
        +date fecha_nacimiento
        +str informacioMedica
        +list historialTapat
        +__str__()
    }

    class UsuarioDAO {
        +login(email: str, password: str) : dict
        +registrar(nombre: str, apellido: str, email: str, password: str) : dict
    }

    class NenDAO {
        +get_child_by_name(child_name: str) : Nen
    }

    class ViewConsole {
        +get_input(prompt: str) : str
        +show_child_info() : void
        +get_input_login() : tuple
        +get_input_registro() : tuple
        +show_menu() : str
    }

    UsuarioDAO --> Usuario : interacts with
    NenDAO --> Nen : interacts with
    ViewConsole --> UsuarioDAO : uses
    ViewConsole --> NenDAO : uses
    ViewConsole --> Nen : displays information of
    ViewConsole --> Usuario : displays information of
